--- a/Marlin-bugfix-2.1.x/ini/stm32f4.ini
+++ b/Marlin-bugfix-2.1.x/ini/stm32f4.ini
@@ -171,6 +171,27 @@ build_flags       = ${stm32_variant.build_flags}
 extra_scripts     = ${stm32_variant.extra_scripts}
 
 #
+# STM32F407VET6 Generic with DFU bootloader
+#
+[env:genericSTM32F407VET6]
+platform = ststm32
+board = genericSTM32F407VET6
+framework = arduino
+src_filter = +<src/*> -<tests/*>
+
+build_flags =
+  -D USBCON
+  -D PIO_FRAMEWORK_ARDUINO_ENABLE_CDC
+  -D USBD_VID=0x0483
+  -D USBD_PID=0x5740
+  -D USB_PRODUCT="STM32F4"
+  -D USBD_VBUS_DETECT=0     ; utile si VBUS n’est pas câblé
+monitor_speed = 250000
+upload_protocol = custom
+upload_command =
+  "$PROJECT_PACKAGES_DIR/tool-dfuutil/bin/dfu-util" -d 0483:df11 -a 0 -s 0x08000000:leave -D "$SOURCE"
+
+#
 # Anet ET4-MB_V1.x/ET4P-MB_V1.x (STM32F407VGT6 ARM Cortex-M4)
 #
 [Anet_ET4]
