Configuration of CAN bus communication

--- a/Marlin-bugfix-2.1.x/ini/stm32f4.ini
+++ b/Marlin-bugfix-2.1.x/ini/stm32f4.ini
@@ -178,7 +178,7 @@ platform = ststm32
 board = genericSTM32F407VET6
 framework = arduino
 src_filter = +<src/*> -<tests/*>
-
+build_src_filter = +<Drivers/STM32F4xx_HAL_Driver/Src/*>
 build_flags =
   -D USBCON
   -D PIO_FRAMEWORK_ARDUINO_ENABLE_CDC
@@ -186,6 +186,7 @@ build_flags =
   -D USBD_PID=0x5740
   -D USB_PRODUCT="STM32F4"
   -D USBD_VBUS_DETECT=0     ; utile si VBUS n’est pas câblé
+   -Ilib/STM32F4_HAL/Inc
 monitor_speed = 250000
 upload_protocol = custom
 upload_command =
